-I have uncovered the animation bug

--- a/styles.css
+++ b/styles.css
@@ -251,8 +251,13 @@ transform: translateY(calc(-1 * var(--clickedShiftY))) translateX(calc(-1 * var(
 	width: 100%;
 	z-index: 1;
 	/*transition:transition: left 0.5s ease-in, top 0.5s ease-in,*/
-	color: var(--codeBackGround);
 	background-color: var(--liesBackGround);
+	background-color: blue;
+}
+
+#shapeContainer.codeShow {
+	background-color: var(--codeBackGround);
+	background-color: green;
 }
 
 /*#liesShape {
@@ -288,7 +293,6 @@ transform: translateY(calc(-1 * var(--clickedShiftY))) translateX(calc(-1 * var(
   width: 100%;
   height: 100%;
   stroke-width: 0;
-  fill: green;
 	visibility:inherit;
 }
 
